pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: haider-pod
spec:
  containers:
    - name: nginx-container
      image: nginx:1.25   
      ports:
        - containerPort: 80
