deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sport-deployment
  labels:
    app: sport-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sport-app
  template:
    metadata:
      labels:
        app: sport-app
    spec:
      containers:
      - name: sport-container
        image: haiderzafar/sport:v1.0.0
        ports:
          - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: sport-service
spec:
  selector:
    app: sport-app
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5000
  type: NodePort
