deployment3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fitness-deployment
  labels:
    app: fitness-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fitness-app
  template:
    metadata:
      labels:
        app: fitness-app
    spec:
      containers:
      - name: fitness-container
        image: haiderzafar/fitness:v1.0.0
        ports:
          - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: fitness-service
spec:
  selector:
    app: fitness-app
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5000
  type: NodePort
