http-route.yaml
apiVersion: networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: my-http-route
  namespace: haider-ns
spec:
  parentRefs:
    - name: haider-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/fitness
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              ReplacePrefixMatch: /fitness
      backendRefs:
        - name: fitness-service
          port: 5000
